--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,15 @@ dependencies:
   bloc: ^7.0.0
   flutter_bloc: ^7.0.0
 
+  # sqflite
+  sqlite3: ^1.0.0
+  sqlite3_flutter_libs: ^0.4.1
+
+  sqflite_common_ffi: ^2.0.0
+  sqflite: ^2.0.0+3
+  path: ^1.8.0
+  path_provider: ^2.0.1
+
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
